[tool.poetry]
name = "camundactl"
version = "0.1.0a4"
description = "A Camunda cli that interacts with the rest api"
authors = ["Jens Blawatt <jblawatt@googlemail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jblawatt/camundactl"
repository = "https://github.com/jblawatt/camundactl"
documentation = "https://github.com/jblawatt/camundactl"
keywords = ["camunda", "click", "cli"]


[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
requests = "^2.26.0"
tabulate = "^0.8.9"
types-requests = "^2.25.6"
Jinja2 = "^3.0.1"
jsonpath-ng = "^1.5.3"
click = "^8.0.1"
toolz = "^0.11.1"
jsonschema = "^3.2.0"
rainbow_logging_handler = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
isort = "^5.9.3"
black = "^21.7b0"
mypy = "^0.910"
flake8 = "^3.9.2"
pudb = "^2021.1"
pyinstaller = "^4.5.1"
mkdocs = "^1.2.2"
mkdocstrings = "^0.16.1"
mkdocs-gen-files = "^0.3.3"
plantuml-markdown = "^3.4.3"
mkdocs-rokubun = "^5.5.12"
mkdocs-gitbook = "^0.0.1"
responses = "^0.14.0"
pytest-cov = "^2.12.1"
coverage = "^5.5"
ipdb = "^0.13.9"
mkdocs-click = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"cctl" = "camundactl.__main__:_main"
